--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bs-i18n-access-utils",
   "version": "0.0.1",
   "description": "比升生成页面权限点以及i18n工具",
-  "main": "lib/main.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -18,6 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0"
+    "@types/lodash": "^4.14.196",
+    "axios": "^1.4.0",
+    "lodash": "^4.17.21"
   }
 }
