--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./lib/",
-    "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
-    "allowJs": true,
+    "outDir": "./lib",
+    "noImplicitAny": false,
+    "module": "commonjs",
+    "target": "esnext",
+    "allowJs": false,
     "moduleResolution": "node",
     "strict": true,
+    "declaration": true,
+    "esModuleInterop": true
   },
+  "include": ["src"]
 }
