--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "inquirer": "^8.2.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
