--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bs-i18n-access-utils",
-  "version": "0.0.6",
+  "version": "0.0.9",
   "description": "比升生成页面权限点以及i18n工具",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
