--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-i18n-access-utils",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "description": "比升生成页面权限点以及i18n工具",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.196",
     "axios": "^1.4.0",
+    "bs-i18n-access-utils": "^0.2.2",
     "lodash": "^4.17.21",
     "prettier": "^3.0.3"
   }
