--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bs-i18n-access-utils",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "比升生成页面权限点以及i18n工具",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "bin": {
     "i18n": "./bin/index.ts"
   },
+  "files":["!src"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -26,7 +27,6 @@
   "dependencies": {
     "@types/lodash": "^4.14.196",
     "axios": "^1.4.0",
-    "bs-i18n-access-utils": "^0.2.2",
     "commander": "^11.0.0",
     "lodash": "^4.17.21",
     "prettier": "^3.0.3"
