--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bs-i18n-access-utils",
-  "version": "0.2.6",
-  "description": "比升生成页面权限点以及i18n工具",
+  "name": "access-url-util",
+  "version": "0.0.1",
+  "description": "权限点收集工具",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "bin": {
