--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "strict": true,
     "declaration": true,
     "esModuleInterop": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src"]
 }
