--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "bin": {
-    "i18n": "./bin/index.ts"
+    "route": "./bin/route.ts"
   },
-  "files":["!src"],
+  "files": [
+    "!src"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -25,10 +27,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "@types/lodash": "^4.14.196",
     "axios": "^1.4.0",
+    "babel-loader": "^9.1.3",
     "commander": "^11.0.0",
     "lodash": "^4.17.21",
-    "prettier": "^3.0.3"
+    "moment": "^2.30.1",
+    "prettier": "^3.0.3",
+    "xlsx": "^0.18.5"
   }
 }
