--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
     "commander": "^11.0.0",
+    "exceljs": "^4.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "prettier": "^3.0.3",
-    "xlsx": "^0.18.5"
+    "prettier": "^3.0.3"
   }
 }
