feature:开始处理子文件

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "bin": {
-    "route": "./bin/route.ts"
+    "route": "./bin/route.ts",
+    "loop": "./bin/loop.ts"
   },
   "files": [
     "!src"
